src/test/ui/proc-macro/proc-macro-attributes.stderr
error[E0658]: The attribute `C` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/proc-macro-attributes.rs:7:3
   |
LL | #[C]
   |   ^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:6:3
   |
LL | #[B]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:8:3
   |
LL | #[B(D)]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:9:3
   |
LL | #[B(E = "foo")]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error[E0659]: `B` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/proc-macro-attributes.rs:10:3
   |
LL | #[B(arbitrary tokens)]
   |   ^ ambiguous name
   |
note: `B` could refer to the derive helper attribute defined here
  --> $DIR/proc-macro-attributes.rs:11:10
   |
LL | #[derive(B)]
   |          ^
note: `B` could also refer to the derive macro imported here
  --> $DIR/proc-macro-attributes.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0658, E0659.
For more information about an error, try `rustc --explain E0658`.
